# sdd-coverage

./: .gitignore  CLAUDE.md  Cargo.toml  PROCESS.md  README.md  requirements.yaml  sdd-coverage-api.yaml  tasks.yaml
fixtures/: valid_requirements.yaml
fixtures/scan_project/: requirements.yaml  tasks.yaml
fixtures/scan_project/src/: app.ts  data.json  lib.py  main.rs  util.go  widget.dart
fixtures/scan_project/tests/: test_main.rs
fixtures/valid_project/: tasks.yaml
src/: lib.rs  main.rs
src/api/: annotations.rs  healthcheck.rs  mod.rs  requirements.rs  scan.rs  stats.rs  tasks.rs
src/config/: mod.rs
src/coverage/: mod.rs
src/error/: mod.rs
src/models/: mod.rs
src/parser/: mod.rs
src/scanner/: mod.rs
tests/: api_annotations_test.rs  api_error_handling_test.rs  api_healthcheck_test.rs  api_requirement_detail_test.rs  api_requirements_test.rs  api_scan_status_test.rs  api_scan_test.rs  api_stats_test.rs  api_tasks_test.rs  config_test.rs  coverage_run_scan_test.rs  coverage_stats_test.rs  coverage_summary_test.rs  coverage_test.rs  parser_duplicates_test.rs  parser_errors_test.rs  parser_id_format_test.rs  parser_tasks_test.rs  parser_test.rs  scanner_classify_test.rs  scanner_orphan_annotations_test.rs  scanner_orphan_tasks_test.rs  scanner_skip_test.rs  scanner_snippet_test.rs  scanner_test.rs
tests/common/: mod.rs
