[package]
name = "sdd-coverage"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
regex = "1"
serde_yaml = "0.9"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
