[package]
name = "sdd-coverage"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
walkdir = "2"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
